results/securify2/access_control_unprotected0.error.txt
WARNING: The requested image's platform (linux/amd64) does not match the detected host platform (linux/arm64/v8) and no specific platform was requested
Traceback (most recent call last):
  File "securify/__main__.py", line 286, in <module>
    main()
  File "securify/__main__.py", line 277, in main
    matches.extend(pattern.find_matches())
  File "/sec/securify/analyses/patterns/ast/default_constructor_pattern.py", line 17, in find_matches
    ast_root = self.get_ast_root()
  File "/sec/securify/analyses/patterns/ast/abstract_ast_pattern.py", line 18, in get_ast_root
    ast_root = self.analysis_context.ast
  File "/sec/securify/analyses/analysis.py", line 74, in ast
    self._ast = self.config.ast_compiler(self)
  File "securify/__main__.py", line 253, in <lambda>
    ast_compiler=lambda t: solidity_ast_compiler.compile_ast(t.source_file),
  File "/sec/securify/solidity/solidity_ast_compiler.py", line 31, in compile_ast
    compile_output = compile_standard(compile_input, allow_paths='/')
  File "/usr/local/lib/python3.7/dist-packages/py_solc-3.2.0-py3.7.egg/solc/main.py", line 181, in compile_standard
    message=error_message,
solc.exceptions.SolcError: fixed_pragma.sol:17:6: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use "constructor(...) { ... }" to define it.
function Unprotected()
^ (Relevant source part starts here and spans across multiple lines).

   > command: `solc --allow-paths / --standard-json`
   > return code: `0`
   > stderr:
   {"errors":[{"component":"general","formattedMessage":"fixed_pragma.sol:17:6: SyntaxError: Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use \"constructor(...) { ... }\" to define it.\n     function Unprotected()\n     ^ (Relevant source part starts here and spans across multiple lines).\n","message":"Functions are not allowed to have the same name as the contract. If you intend this to be a constructor, use \"constructor(...) { ... }\" to define it.","severity":"error","sourceLocation":{"end":412,"file":"fixed_pragma.sol","start":331},"type":"SyntaxError"},{"component":"general","formattedMessage":"fixed_pragma.sol:17:6: Warning: This declaration shadows an existing declaration.\n     function Unprotected()\n     ^ (Relevant source part starts here and spans across multiple lines).\nfixed_pragma.sol:9:2: The shadowed declaration is here:\n contract Unprotected{\n ^ (Relevant source part starts here and spans across multiple lines).\n","message":"This declaration shadows an existing declaration.","secondarySourceLocations":[{"end":740,"file":"fixed_pragma.sol","message":"The shadowed declaration is here:","start":192}],"severity":"warning","sourceLocation":{"end":412,"file":"fixed_pragma.sol","start":331},"type":"Warning"}],"sources":{}}

   > stdout:
